--- a/src/assets/style/reset.scss
+++ b/src/assets/style/reset.scss
@@ -20,7 +20,8 @@ a:hover {
     outline: none;
   }
   h1,h2,h3,h4,h5,h6 {
-    font-size: 100%
+    font-size: 100%;
+    font-weight: normal;
 }
 
 address,cite,dfn,em,var {
